# rkeep

./: Cargo.toml  LICENSE  README.md  config.sample.toml  install.sh  rkeep.service  rkeepd.service
src/: client.rs  config.rs  interface.rs  lib.rs  server.rs
src/interface/: display.rs  keepass.rs  rofi.rs
