[package]
name = "rkeep"
version = "0.0.1"
authors = ["leaty <dev@leaty.net>"]
edition = "2018"

[[bin]]
name = "rkeep-server"
path = "src/server.rs"

[[bin]]
name = "rkeep-client"
path = "src/client.rs"

[dependencies]
clap = "2.33.1"
git-version = "0.3.4"
rexpect = "0.4.0"
xdg = "2.2.0"
toml = "0.5.6"
serde = { version = "1.0.114", features = ["derive"]}

